--- a/src/cargo/assets/ejs-views/head/description.ejs
+++ b/src/cargo/assets/ejs-views/head/description.ejs
@@ -1,3 +1,3 @@
-<? if ($.description || ($.isBasePath && $.$build?.env.APP_DESC)) { ?>
-	<meta name="description" content="<?= $.description || $.$build.env.APP_DESC ?>" />
+<? if ($.description || ($.isBasePath && $.$build?.env.APP_DESCRIPTION)) { ?>
+	<meta name="description" content="<?= $.description || $.$build.env.APP_DESCRIPTION ?>" />
 <? } ?>
