--- a/src/cargo/assets/ejs-views/head/og-tags.ejs
+++ b/src/cargo/assets/ejs-views/head/og-tags.ejs
@@ -6,7 +6,7 @@
 	var ogSiteName = $.ogSiteName || $.$build.env.APP_NAME || '';
 	var ogType = $.ogType || 'website'; // To learn more, see: <https://ogp.me>.
 	var ogTitle = $.ogTitle || $.title || ($.isBasePath ? $.$build.env.APP_TITLE || $.$build.env.APP_NAME : '') || '';
-	var ogDesc = $.ogDescription || $.description || ($.isBasePath ? $.$build.env.APP_DESC : '') || '';
+	var ogDescription = $.ogDescription || $.description || ($.isBasePath ? $.$build.env.APP_DESCRIPTION : '') || '';
 	var ogURL =  $.ogURL || $.canonicalURL || ($.isBasePath ? $.$build.env.APP_BASE_URL : '') || '';
 	var ogImage = $.ogImage || ($.$build.env.APP_BASE_URL && fs.existsSync(path.resolve($.$build.projDir, './src/cargo/assets/brand/og-image.png')) ?
 			$.$build.env.APP_BASE_URL + '/assets/brand/og-image.png?' + qs.encode({ v: $.$build.pkg.version || '' })
@@ -15,15 +15,15 @@
 	var ogSiteName = $.ogSiteName || '';
 	var ogType = $.ogType || 'website';
 	var ogTitle = $.ogTitle || $.title || '';
-	var ogDesc = $.ogDescription || $.description || '';
+	var ogDescription = $.ogDescription || $.description || '';
 	var ogURL =  $.ogURL || $.canonicalURL || '';
 	var ogImage = $.ogImage || '';
 } ?>
-<? if (ogSiteName && ogType && ogTitle && ogDesc && ogURL && ogImage) { ?>
+<? if (ogSiteName && ogType && ogTitle && ogDescription && ogURL && ogImage) { ?>
 	<meta property="og:site_name" content="<?= ogSiteName ?>" />
 	<meta property="og:type" content="<?= ogType ?>" />
 	<meta property="og:title" content="<?= ogTitle ?>" />
-	<meta property="og:description" content="<?= ogDesc ?>" />
+	<meta property="og:description" content="<?= ogDescription ?>" />
 	<meta property="og:url" content="<?= ogURL ?>" />
 	<meta property="og:image" content="<?= ogImage ?>" />
 <? } ?>
