--- a/dev/.files/tailwind/layers.scss
+++ b/dev/.files/tailwind/layers.scss
@@ -42,7 +42,7 @@ $google-fonts: (
         @apply bg-color-basic text-color-basic-fg;
 
         :where(a, .link):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
-            @apply text-color-basic-link/80 no-underline hover:text-color-basic-link;
+            @apply cursor-pointer text-color-basic-link/80 no-underline hover:text-color-basic-link;
 
             &:hover {
                 @apply underline;
@@ -58,7 +58,7 @@ $google-fonts: (
         @apply bg-color-header text-color-header-fg;
 
         :where(a, .link):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
-            @apply text-color-header-link/80 hover:text-color-header-link;
+            @apply cursor-pointer text-color-header-link/80 hover:text-color-header-link;
         }
 
         :where(h1, h2, h3, h4, h5, h6):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
@@ -70,7 +70,7 @@ $google-fonts: (
         @apply bg-color-sidebar text-color-sidebar-fg;
 
         :where(a, .link):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
-            @apply text-color-sidebar-link/80 hover:text-color-sidebar-link;
+            @apply cursor-pointer text-color-sidebar-link/80 hover:text-color-sidebar-link;
         }
 
         :where(h1, h2, h3, h4, h5, h6):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
@@ -82,7 +82,7 @@ $google-fonts: (
         @apply bg-color-footer text-color-footer-fg;
 
         :where(a, .link):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
-            @apply text-color-footer-link/80 hover:text-color-footer-link;
+            @apply cursor-pointer text-color-footer-link/80 hover:text-color-footer-link;
         }
 
         :where(h1, h2, h3, h4, h5, h6):not(:where(.prose, .not-basic, .prose *, .not-basic *)) {
