--- a/dev/.files/tailwind/mixins/_starry-night.scss
+++ b/dev/.files/tailwind/mixins/_starry-night.scss
@@ -39,63 +39,72 @@
         border-radius: 0.1875rem;
     }
 
-    // `<pre>` tag inside code block container.
-    .highlight pre {
-        padding: 0.8571em 0;
-        margin: 0;
-        background: none;
-        border: 0;
-        border-radius: 0;
-        box-shadow: inset 0 0 2px 2px rgb(var(--colors-color-starry-night-box-shadows));
+    // Nested highlight styles.
+    .highlight {
+        // `<pre>` tag.
+        > pre {
+            padding: 0.8571em 0;
+            margin: 0;
+            background: none;
+            border: 0;
+            border-radius: 0;
+            box-shadow: inset 0 0 2px 2px rgb(var(--colors-color-starry-night-box-shadows));
 
-        // `<code>` tag inside code block container.
-        & > code {
-            display: grid;
-            color: rgb(var(--colors-color-starry-night-fg));
-        }
-    }
-
-    // Lines of code inside code block container.
-    .highlight .line {
-        padding-inline: 1.1428em;
-
-        // Focused and/or hovered lines of code.
-        &:focus:not(:focus-visible),
-        &:hover {
-            background: rgb(var(--colors-color-starry-night-hilited-lines));
+            // `<code>` tag.
+            > code {
+                display: grid;
+                color: rgb(var(--colors-color-starry-night-fg));
+            }
         }
 
-        // Line numbers.
-        & .line-number {
+        // Lines of code.
+        .line {
+            padding-inline: 1.1428em;
+
+            // Focused and/or hovered lines of code.
+            &:hover,
+            &:focus:not(:focus-visible) {
+                background: rgb(var(--colors-color-starry-night-hilited-lines));
+            }
+        }
+
+        // Lines of code line numbers.
+        .line-number {
             margin-inline-end: 1em;
             color: rgb(var(--colors-color-starry-night-syntax-gutter-mark-fg));
             user-select: none;
         }
 
         // Highlighted lines of code.
-        &[data-highlighted] {
+        .line[data-highlighted] {
             background: rgb(var(--colors-color-starry-night-hilited-lines));
             border-inline-start: 2px solid rgb(var(--colors-color-starry-night-syntax-comment-fg));
 
             // Highlighted line numbers.
-            & .line-number {
+            .line-number {
                 color: rgb(var(--colors-color-starry-night-syntax-comment-fg));
             }
         }
 
         // Lines with shell prompt icons.
-        & .line-prompt::before {
-            display: inline-block;
-            width: 1em;
-            height: 1em;
-            margin-inline: -0.175em 0.35em;
-            vertical-align: middle;
-            content: '';
-            background: rgb(var(--colors-color-starry-night-syntax-comment-fg));
-            mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' fill-rule='evenodd' clip-rule='evenodd' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17.179 5.597C13.491 3.081 5.957 3.057 6.344 8.186c.399 5.287 11.204 1.813 11.566 7.102.369 5.375-8 5.71-11.832 2.666M12.017 2v20'/%3E%3C/svg%3E");
-            mask-repeat: no-repeat;
-            mask-position: top center;
-            mask-size: contain;
+        .line-prompt {
+            &::before {
+                display: inline-block;
+                width: 1em;
+                height: 1em;
+                margin-inline: -0.175em 0.35em;
+                vertical-align: middle;
+                content: '';
+                background: rgb(var(--colors-color-starry-night-syntax-comment-fg));
+
+                // Define as a variable so that when autoprefixer runs it won’t end up duplicating this lengty value.
+                --mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' fill-rule='evenodd' clip-rule='evenodd' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17.179 5.597C13.491 3.081 5.957 3.057 6.344 8.186c.399 5.287 11.204 1.813 11.566 7.102.369 5.375-8 5.71-11.832 2.666M12.017 2v20'/%3E%3C/svg%3E");
+
+                mask-image: var(--mask-image);
+                mask-repeat: no-repeat;
+                mask-position: top center;
+                mask-size: contain;
+            }
         }
     }
 
