--- a/dev/.files/tailwind/mixins/_starry-night.scss
+++ b/dev/.files/tailwind/mixins/_starry-night.scss
@@ -97,7 +97,7 @@
                 content: '';
                 background: rgb(var(--colors-color-starry-night-syntax-comment-fg));
 
-                // Define as a variable so that when autoprefixer runs it won’t end up duplicating this lengty value.
+                // Define as a variable so that when autoprefixer runs it won’t end up duplicating this lengthy value.
                 --mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' fill-rule='evenodd' clip-rule='evenodd' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17.179 5.597C13.491 3.081 5.957 3.057 6.344 8.186c.399 5.287 11.204 1.813 11.566 7.102.369 5.375-8 5.71-11.832 2.666M12.017 2v20'/%3E%3C/svg%3E");
 
                 mask-image: var(--mask-image);
