Project update. [p][robotic]

--- a/dev/.files/tailwind/layers.scss
+++ b/dev/.files/tailwind/layers.scss
@@ -41,7 +41,7 @@ $google-fonts: (
  *
  * - In our Tailwind implementation, class `p` = `prose`.
  * - In our Tailwind implementation, a much shorter `_` = `not-p` = `not-prose`.
- * - In our basic styles, a much shorter `_` = `not-p` = `not-prose`= `not-basic`.
+ * - In our basic styles, a much shorter `_` = `not-p` = `not-prose` = `not-basic`.
  */
 @layer base {
     html {
@@ -62,7 +62,7 @@ $google-fonts: (
     }
 
     .basic-header {
-        @apply bg-color-header text-color-header-fg;
+        @apply border-color-header-bdr bg-color-header text-color-header-fg;
 
         :where(a, .link):not(:where(.p, .p *, ._, ._ *)) {
             @apply cursor-pointer text-color-header-link/80 hover:text-color-header-link;
@@ -74,7 +74,7 @@ $google-fonts: (
     }
 
     .basic-sidebar {
-        @apply bg-color-sidebar text-color-sidebar-fg;
+        @apply border-color-sidebar-bdr bg-color-sidebar text-color-sidebar-fg;
 
         :where(a, .link):not(:where(.p, .p *, ._, ._ *)) {
             @apply cursor-pointer text-color-sidebar-link/80 hover:text-color-sidebar-link;
@@ -86,7 +86,7 @@ $google-fonts: (
     }
 
     .basic-footer {
-        @apply bg-color-footer text-color-footer-fg;
+        @apply border-color-footer-bdr bg-color-footer text-color-footer-fg;
 
         :where(a, .link):not(:where(.p, .p *, ._, ._ *)) {
             @apply cursor-pointer text-color-footer-link/80 hover:text-color-footer-link;
@@ -94,6 +94,34 @@ $google-fonts: (
 
         :where(h1, h2, h3, h4, h5, h6):not(:where(.p, .p *, ._, ._ *)) {
             @apply text-color-footer-heading;
+        }
+    }
+}
+
+/**
+ * Our utilities layer.
+ *
+ * All of our utilities get prefixed with a leading `_` to help indicate what is being used.
+ * In the same way that all of our JS utilities are prefixed with a `$` sign, we use `_` in CSS.
+ */
+@layer utilities {
+    // Y margins like prose `p` tag.
+    ._my-lp {
+        @apply mt-[1.25em];
+        @apply mb-[1.25em];
+    }
+
+    // First child margin-top 0.
+    ._fc-mt-0 {
+        > :first-child {
+            @apply mt-0;
+        }
+    }
+
+    // Last child margin-bottom 0.
+    ._lc-mb-0 {
+        > :last-child {
+            @apply mb-0;
         }
     }
 }
