--- a/dev/.files/tailwind/mixins/_starry-night.scss
+++ b/dev/.files/tailwind/mixins/_starry-night.scss
@@ -39,6 +39,28 @@
         border-radius: 0.1875rem;
     }
 
+    // Copy button inside code block header.
+    .highlight-copy {
+        &::after {
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            margin: 0 0 0 0.5em;
+            line-height: 1em;
+            vertical-align: middle;
+            content: '';
+            background: rgb(var(--colors-color-basic-fg));
+
+            // Define as a variable so that when autoprefixer runs it won’t end up duplicating this lengthy value.
+            --highlight-copy-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath d='M384 336H192c-9 0-16-7-16-16V64c0-9 7-16 16-16h140l68 68v204c0 9-7 16-16 16zm-192 48h192c35 0 64-29 64-64V116c0-13-5-25-14-34l-68-68c-9-9-21-14-34-14H192c-35 0-64 29-64 64v256c0 35 29 64 64 64zM64 128c-35 0-64 29-64 64v256c0 35 29 64 64 64h192c35 0 64-29 64-64v-32h-48v32c0 9-7 16-16 16H64c-9 0-16-7-16-16V192c0-9 7-16 16-16h32v-48H64z'/%3E%3C/svg%3E");
+
+            mask-image: var(--highlight-copy-mask-image);
+            mask-repeat: no-repeat;
+            mask-position: top center;
+            mask-size: contain;
+        }
+    }
+
     // Nested highlight styles.
     .highlight {
         // `<pre>` tag.
@@ -98,9 +120,9 @@
                 background: rgb(var(--colors-color-starry-night-syntax-comment-fg));
 
                 // Define as a variable so that when autoprefixer runs it won’t end up duplicating this lengthy value.
-                --mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' fill-rule='evenodd' clip-rule='evenodd' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17.179 5.597C13.491 3.081 5.957 3.057 6.344 8.186c.399 5.287 11.204 1.813 11.566 7.102.369 5.375-8 5.71-11.832 2.666M12.017 2v20'/%3E%3C/svg%3E");
+                --highlight-line-prompt-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' fill-rule='evenodd' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' clip-rule='evenodd' viewBox='0 0 24 24'%3E%3Cpath d='M17 6C13 3 6 3 6 8c1 5 12 2 12 7 0 6-8 6-12 3m6-16v20'/%3E%3C/svg%3E");
 
-                mask-image: var(--mask-image);
+                mask-image: var(--highlight-line-prompt-mask-image);
                 mask-repeat: no-repeat;
                 mask-position: top center;
                 mask-size: contain;
