--- a/dev/.files/tailwind/mixins/_starry-night.scss
+++ b/dev/.files/tailwind/mixins/_starry-night.scss
@@ -42,26 +42,18 @@
     // Copy button inside code block header.
     .highlight-copy {
         position: relative;
+        user-select: none;
 
-        &::after {
-            display: inline-block;
-            width: 1em;
-            height: 1em;
-            margin: 0 0 0 0.5em;
-            line-height: 1em;
-            vertical-align: middle;
-            content: '';
-            background: rgb(var(--colors-color-basic-fg));
+        &:disabled {
+            pointer-events: none;
+            opacity: 0.7;
         }
 
         &::after {
-            // Define as a variable so that when autoprefixer runs it won’t end up duplicating this lengthy value.
-            --highlight-copy-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath d='M384 336H192c-9 0-16-7-16-16V64c0-9 7-16 16-16h140l68 68v204c0 9-7 16-16 16zm-192 48h192c35 0 64-29 64-64V116c0-13-5-25-14-34l-68-68c-9-9-21-14-34-14H192c-35 0-64 29-64 64v256c0 35 29 64 64 64zM64 128c-35 0-64 29-64 64v256c0 35 29 64 64 64h192c35 0 64-29 64-64v-32h-48v32c0 9-7 16-16 16H64c-9 0-16-7-16-16V192c0-9 7-16 16-16h32v-48H64z'/%3E%3C/svg%3E");
-
-            mask-image: var(--highlight-copy-mask-image);
-            mask-repeat: no-repeat;
-            mask-position: top center;
-            mask-size: contain;
+            margin: 0 0 0 0.5em;
+            line-height: 1em;
+            vertical-align: middle;
+            content: '❏';
         }
 
         &::before {
